# klin

./: .gitignore  PROJECT_INFO.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  THEME_IMPLEMENTATION.md  THEME_QUICK_REFERENCE.md  THEME_STATUS.md  THEMING.md  package.json  tailwind.config.ts  test.tsxt  vite.config.ts
docs/: BACKEND.md  FRONTEND.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_ops.rs  lib.rs  main.rs  note_ops.rs
src/components/file/: avatar-group.tsx  file-icon.tsx  (+2 more)
src/context/: theme-context.tsx
src/hooks/: useThemeColors.ts
src/lib/: ai-api.ts  bytes.ts  date.ts  folder-notes.ts  mock-api.ts  note-api.ts  sanitize.ts  tauri-api.ts
src/pages/: calendar-page.tsx  help-support-page.tsx  history-page.tsx  my-files-page.tsx  note-page.tsx  secret-folder-page.tsx  settings-page.tsx  subscription-page.tsx
src/store/: useFileStore.ts
src/styles/: theme-variables.css  themes.ts
src/types/: file.ts
worker/: .env.example  README.md  pyproject.toml
worker/app/: __init__.py  main.py
worker/app/adapters/: __init__.py  ollama_vlm.py
worker/app/api/v1/routers/: health.py  organize.py
worker/app/core/: config.py  lifecycle.py  logging.py
worker/app/internal/: __init__.py
worker/app/schemas/: __init__.py  common.py  ingest.py  organize.py  summary.py
worker/app/services/: ingestion.py  planning.py
worker/app/utils/: __init__.py
worker/docs/: API_EXAMPLES.md  ARCHITECTURE_COMPARISON.md  Diagram-v1.md  WORKER_SUMMARY.md
worker/examples/: llm_extraction_example.py
(+97 files in other folders)
