[project]
name = "worker"
version = "0.1.0"
description = "FastAPI worker for document processing and vector storage."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi[standard]>=0.121.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.6",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
]
