[project]
name = "worker"
version = "0.1.0"
description = "FastAPI worker for document processing and vector storage."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
]
